Added a couple missing strings to the locale, fixed indentation.

--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -32,6 +32,16 @@ Substract_Key= Substract
 Multiply_Key= Multiply
 Divide_Key= Divide
 Numlock_Key= NumLock
+Numpad0_Key= Numpad 0
+Numpad1_Key= Numpad 1
+Numpad2_Key= Numpad 2
+Numpad3_Key= Numpad 3
+Numpad4_Key= Numpad 4
+Numpad5_Key= Numpad 5
+Numpad6_Key= Numpad 6
+Numpad7_Key= Numpad 7
+Numpad8_Key= Numpad 8
+Numpad9_Key= Numpad 9
 Scroll_Key= ScrollLock
 Convert_Key= Convert
 Nonconvert_Key= NonConvert
